--- a/templates/gen_playlist.html
+++ b/templates/gen_playlist.html
@@ -2,11 +2,11 @@
 {% load bulma_tags %}
 
 {% block content %}
-<h1>Local Library Home</h1>
 <!-- <form action="/your-name/" method="post"> -->
 <form action="{% url 'generate_playlist' %}" method="post">
     {% csrf_token %}
-    {{ form | bulma }}
-    <input type="submit" value="Submit">
+  {{ form | bulma }}
+
+  <input class="button is-primary is-outlined form-button" type="submit" value="Generate playlist">
 </form>
 {% endblock %}
