--- a/templates/bulma/base.html
+++ b/templates/bulma/base.html
@@ -32,7 +32,7 @@
       </div>
       <div>
         {% if request.user.is_anonymous %}
-        <a class="navbar-item" href="{% url 'account_login' %}">
+        <a class="navbar-item" href="{% url 'spotify_login' %}">
           Login
         </a>
         {% else %}
