--- a/templates/gen_playlist.html
+++ b/templates/gen_playlist.html
@@ -2,11 +2,16 @@
 {% load bulma_tags %}
 
 {% block content %}
-<!-- <form action="/your-name/" method="post"> -->
+
+{% if request.user.is_anonymous %}
+
+You need to <a href="{% url 'spotify_login' %}">login</a> before you can continue.
+{% else %}
 <form action="{% url 'generate_playlist' %}" method="post">
     {% csrf_token %}
   {{ form | bulma }}
 
   <input class="button is-primary is-outlined form-button" type="submit" value="Generate playlist">
 </form>
+{% endif %}
 {% endblock %}
