--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -17,6 +17,7 @@
       <div>
         <p>Lalipo needs access to your spotify account, in order to create playlists on your behalf.</p>
         <p>The access will only be used for the intended purpose. Once you log out, the stored credentials will be deleted.</p>
+        <p>The provided access only allows for playlist edition.</p>
       </div>
     </div>
   </ul>
