finishing and last touches

--- a/templates/bulma/base.html
+++ b/templates/bulma/base.html
@@ -19,7 +19,7 @@
     <section class="hero is-secondary">
       <div class="hero-body">
         <div style="display: flex; justify-content: space-between">
-          <a href="{% url 'input_playlist' %}" class="main-title">
+          <a href="{% url 'playlist_input' %}" class="main-title">
             <div class=""
               <p class="title" >
                 Lalipo
