--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -8,20 +8,21 @@
 
 <form method="post">
   {% csrf_token %}
-  <div style="display: flex; align-items: center">
-    <button class="button is-primary" type="submit"><div>Connect</div></button>
-    <div> with your Spotify account.</div>
-  </div>
   <div class="message is-info" style=" margin: 3em;">
     <div class="message-body">
-      <div>
+      <div style="color: black">
         <p>Lalipo needs access to your spotify account, in order to create playlists on your behalf.</p>
         <p>The access will only be used for the intended purpose. Once you log out, the stored credentials will be deleted.</p>
         <p>The provided access only allows for playlist edition.</p>
       </div>
     </div>
-  </ul>
-
+  </div>
+  <div style="display: flex">
+    <div style="display: flex; align-items: center; margin: auto;">
+      <button class="button is-primary" type="submit"><div>Connect</div></button>
+      <div> with your Spotify account.</div>
+    </div>
+  </div>
 </form>
 
 {% endblock content %}
