--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -1,4 +1,4 @@
-{% extends "socialaccount/base.html" %}
+{% extends "allauth/layouts/base.html" %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock head_title %}
